expense In this commit: - After an expense is saved, its data is published to the "expense-processor" Kafka topic. - The queue aggregates expense data for the current month and updates the total in the `monthly_report` table. - If a record for the current month and category already exists, it will be updated. - Finally, the corresponding record in the `sent_event` table is updated and its `processed` field is set to TRUE.